--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             <a href="#" class="btn btn-primary btn-lg btn-custom">📝 Пройти тест</a>
             
             <!-- Понял -->
-            <a href="#" class="btn btn-outline-secondary btn-lg btn-custom">✅ Понял</a>
+            <a href="#" class="btn btn-outline-secondary btn-lg btn-custom">✅ Довталаб 2025</a>
         </div>
     </div>
 </div>
