--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 
         <div class="d-grid gap-3 mt-4">
             <!-- Пройти тест -->
-            <a href="#" class="btn btn-primary btn-lg btn-custom">📝 Пройти тест</a>
+            <a href="https://play.google.com/store/apps/details?id=com.neuronit.dovtalab2026" class="btn btn-primary btn-lg btn-custom">📝 Пройти тест</a>
             
             <!-- Понял -->
-            <a href="#" class="btn btn-outline-secondary btn-lg btn-custom">✅ Довталаб 2025</a>
+            <a href="https://play.google.com/store/apps/details?id=com.neuronit.dovtalab2025" class="btn btn-outline-secondary btn-lg btn-custom">✅ Довталаб 2025</a>
         </div>
     </div>
 </div>
